BJS2-41323 fixed comments